testsuite/tests/typecheck/should_fail/T8306.stderr
T8306.hs:4:10: error: [GHC-93632]
    • Illegal literal in type (type literals must not be negative): -1
    • In the type ‘-1’
      In the type synonym declaration for ‘T’

